--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4 active">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="./assets/images/c.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
+                        <img src="assets/images/c.jpg" alt="Mobirise Website Builder" data-slide-to="1" data-bs-slide-to="1">
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>ABOUT US</strong></h5>
